# beauxgraphs

./: Plots.ipynb  README.md  beautifulgraphs.mplstyle  beautifulgraphs_colblind.mplstyle  beautifulgraphs_latex.mplstyle  pyproject.toml
src/: cornerdatasets.py
src/beauxgraphs/: cornerdatasets.py
